--- a/.github/workflows/sonar-scanner.yml
+++ b/.github/workflows/sonar-scanner.yml
@@ -8,6 +8,7 @@ jobs:
     - uses: actions/checkout@master
     - name: Setup sonarqube
       uses: warchant/setup-sonar-scanner@v3
+      continue-on-error: true
     - name: Run sonarqube
       run: sonar-scanner
            -Dsonar.organization=1corp 
